[project]
name = "atm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autogen>=0.9.9",
    "colorlog>=6.9.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "logging>=0.4.9.6",
    "markdown>=3.8.2",
    "openai>=1.102.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pymysql>=1.1.2",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "werkzeug>=3.1.3",
]
